--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-rate-limit": "^8.0.1",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
     "rate-limit-redis": "^4.2.2",
