--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,14 @@
 PORT=3000
 NODE_ENV=development
-MONGODB_URI=mongodb://localhost:27017/auth_service
-REDIS_HOST=127.0.0.1
+
+MONGODB_URI=mongodb://localhost:27017/kl_auth_db
+
+REDIS_HOST=localhost
 REDIS_PORT=6379
+REDIS_PASSWORD=
 
 ACCESS_TOKEN_EXPIRES_IN=15m
 REFRESH_TOKEN_EXPIRES_IN=7d
 
-# Đường dẫn tới keys
 PRIVATE_KEY_PATH=./keys/private.pem
 PUBLIC_KEY_PATH=./keys/public.pem
