--- a/package.json
+++ b/package.json
@@ -11,16 +11,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@tailwindcss/cli": "^4.1.12",
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.58.3",
-    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "express-ejs-layouts": "^2.5.1",
     "express-rate-limit": "^8.0.1",
-    "express-session": "^1.18.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
