--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,11 @@ PRIVATE_KEY_PATH=./keys/private.pem
 PUBLIC_KEY_PATH=./keys/public.pem
 
 SESSION_SECRET=
+
+MAIL_ENABLED=true
+
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USER=your_mailtrap_user
+MAIL_PASS=your_mailtrap_password
+MAIL_FROM="KLAuth <no-reply@klauth.com>"
