--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "worker": "node src/worker.js"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +15,7 @@
     "@tailwindcss/cli": "^4.1.12",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
-    "bullmq": "^5.58.3",
+    "bullmq": "^5.58.4",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
@@ -25,6 +26,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
+    "nodemailer": "^7.0.6",
     "rate-limit-redis": "^4.2.2",
     "redis": "^5.8.2",
     "winston": "^3.17.0"
