--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "worker": "node src/worker.js"
+    "worker": "node worker.js"
   },
   "keywords": [],
   "author": "",
