--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "worker": "node worker.js"
+    "worker": "node worker.js",
+    "start:prod": "pm2 start ecosystem.config.js --env production",
+    "stop:prod": "pm2 stop ecosystem.config.js",
+    "restart:prod": "pm2 restart ecosystem.config.js --env production",
+    "delete:prod": "pm2 delete ecosystem.config.js",
+    "logs": "pm2 logs",
+    "monit": "pm2 monit"
   },
   "keywords": [],
   "author": "",
@@ -29,7 +35,9 @@
     "nodemailer": "^7.0.6",
     "rate-limit-redis": "^4.2.2",
     "redis": "^5.8.2",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
+    "winston-mongodb": "^7.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
