feat: enhance configuration and logging setup, update Docker and environment files for improved service management

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,14 @@ APP_URL=http://localhost:3000
 PORT=3000
 NODE_ENV=development
 
-MONGODB_URI=mongodb://localhost:27017/kl_auth_db
+MONGO_HOST=mongodb
+MONGO_POST=27017
+MONGO_USER=root
+MONGO_PASS=klauth_db
+MONGO_DATABASE=klauth_db
+# OR use URI
+MONGODB_URI=mongodb://localhost:27017/klauth_db
+
 
 REDIS_HOST=localhost
 REDIS_PORT=6379
