--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,39 @@
 services:
+  api:
+    build: .
+    container_name: api_klauth
+    ports:
+      - "${PORT}:3000"
+    env_file:
+      - .env
+    depends_on:
+      - mongodb
+      - redis
+    volumes:
+      - .:/app
+      - /app/node_modules
+
+  worker:
+    build: .
+    container_name: worker_klauth
+    command: node worker.js
+    env_file:
+      - .env
+    depends_on:
+      - mongodb
+      - redis
+    volumes:
+      - .:/app
+      - /app/node_modules
+
   mongodb:
     image: mongo:latest
     container_name: mongodb_klauth
     ports:
-      - "27017:27017"
+      - "${MONGO_PORT}:27017"
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=root
-      - MONGO_INITDB_ROOT_PASSWORD=klpod221
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_USER}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASS}
     volumes:
       - ./docker/mongo-data:/data/db
 
@@ -14,7 +41,7 @@ services:
     image: redis:alpine
     container_name: redis_klauth
     ports:
-      - "6380:6379"
-    command: redis-server --requirepass klpod221
+      - "${REDIS_PORT}:6379"
+    command: redis-server --requirepass ${REDIS_PASSWORD}
     volumes:
       - ./docker/redis-data:/data
